# war-machine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  install.sh  readme.md  war_machine.toml
.cargo/: config.toml
.github/workflows/: build-pull.yml  build.yml  release.yml
scripts/: release_and_copy.sh
src/: cli.rs  lib.rs  main.rs
src/lib/: mod.rs
src/lib/auth/: generic.rs  keyring.rs  mod.rs
src/lib/commands/: prepare.rs  run.rs
src/lib/config/: commands.rs  features.rs  mod.rs  requirements.rs  services.rs
src/lib/local_instances/: mod.rs  start.rs
src/lib/local_instances/instances/: meilisearch.rs  mod.rs  qdrant.rs  redis.rs  supabase.rs
src/lib/secrets/: keyring.rs
src/lib/service/: mod.rs  prepare.rs  run.rs  test.rs
src/lib/system/: bitwarden.rs  brew.rs  command.rs  config.rs  custom_app.rs  docker.rs  docker_cli.rs  mod.rs  pipx.rs  poetry.rs  python.rs  python_path.rs  pythonpath.rs  supabase_cli.rs  system.rs
src/lib/utils/: bitwarden.rs  docker.rs  env_vars.rs  mod.rs
src/models/: config.rs  machine_state.rs  mod.rs
tests/: test_bitwarden.rs  test_config.rs  test_env_vars.rs
tests/assets/: war_machine.toml
