[package]
  name         = "wm"
  version      = "0.1.8"
  edition      = "2021"
  rust-version = "1.79.0"
  build        = "build.rs"

[build-dependencies]
  built = "0.7.4"

[dependencies]
  clap = { version = "4.5.10", features = ["derive", "cargo"] }
  clap_complete = "4.5.8"
  dotenv = "0.15.0"
  fastrand = "2.1.0"
  futures = "0.3.30"
  keyring = { version = "3.0.3", features = [
    "async-secret-service",
    "apple-native",
    "windows-native",
    "async-io",
    "crypto-rust",
  ] }
  lazy_static = "1.5.0"
  os_info = "3.8.2"
  regex = "1.7.0"
  reqwest = { version = "0.12.5", features = [
    "json",
    "rustls-tls",
  ], default-features = false }
  rpassword = "7.3.1"
  serde = "1.0.204"
  serde_json = "1.0.120"
  tokio = { version = "1.38.1", features = [
    "macros",
    "signal",
    "fs",
    "process",
    "rt-multi-thread",
    "io-util",
  ] }
  toml = "0.8.15"
