[package]
  name         = "wm"
  version      = "0.1.12"
  edition      = "2021"
  rust-version = "1.79.0"
  build        = "build.rs"

[build-dependencies]
  built = "0.7.5"

[dependencies]
  clap = { version = "4.5.20", features = ["derive", "cargo"] }
  clap_complete = "4.5.35"
  dotenv = "0.15.0"
  fastrand = "2.1.1"
  futures = "0.3.31"
  keyring = { version = "3.5.0", features = [
    "async-secret-service",
    "apple-native",
    "windows-native",
    "async-io",
    "crypto-rust",
  ] }
  lazy_static = "1.5.0"
  os_info = "3.8.2"
  nix = { version = "0.29.0", features = ["user"] }
  regex = "1.11.1"
  reqwest = { version = "0.12.9", features = [
    "json",
    "rustls-tls",
  ], default-features = false }
  rpassword = "7.3.1"
  serde = "1.0.213"
  serde_json = { version = "1.0.132", features = ["std"] }
  tokio = { version = "1.41.0", features = [
    "macros",
    "signal",
    "fs",
    "process",
    "rt-multi-thread",
    "io-util",
  ] }
  toml = "0.8.19"
